crates/derive/tests/reactive/fail/03-empty-struct.rs
use sorrow_derive::Reactive;

#[derive(Reactive)]
pub struct EmptyStruct {}

fn main() {}
